--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Estatal
 excludes=
+file.reference.mysql-connector-java-5.1.49.jar-1=C:\\Users\\RaccoonCaffeine\\Documents\\NetBeansProjects\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.49.jar}
+    ${file.reference.mysql-connector-java-5.1.49.jar}:\
+    ${file.reference.mysql-connector-java-5.1.49.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
